syntax = "proto3";

package protos.car_motion_data;

// Main packet
message PacketMotionData {
    repeated CarMotionData m_car_motion_data = 1;
}

message CarMotionData {
    float m_worldPositionX = 1;
    float m_worldPositionY = 2;
    float m_worldPositionZ = 3;
    float m_worldVelocityX = 4;
    float m_worldVelocityY = 5;
    float m_worldVelocityZ = 6;
    int32 m_worldForwardDirX = 7;
    int32 m_worldForwardDirY = 8;
    int32 m_worldForwardDirZ = 9;
    int32 m_worldRightDirX = 10;
    int32 m_worldRightDirY = 11;
    int32 m_worldRightDirZ = 12;
    float m_gForceLateral = 13;
    float m_gForceLongitudinal = 14;
    float m_gForceVertical = 15;
    float m_yaw = 16;
    float m_pitch = 17;
    float m_roll = 18;
}